--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,53 @@
 *~
-*.py[co]
 .*.swp
-/build
-/dist
-*.egg-info
 RELEASE-VERSION
-/doc/build
 /CHANGELOG.txt
-/tmp
 .ropeproject
+
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.eggs
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+htmlcov
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Complexity
+output/*.html
+output/*/index.html
+
+# Sphinx
+docs/_build
+
+# Notes
+notes.txt
