--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,13 @@
-include version.py
-include RELEASE-VERSION
-include CHANGELOG.txt
+include AUTHORS.rst
+include CONTRIBUTING.rst
+include HISTORY.rst
+include LICENSE
 include README.rst
+
 recursive-include liquimigrate/vendor *
+
+recursive-include tests *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
+
+recursive-include docs *.rst conf.py Makefile make.bat
