fix gitignore and add snakeyaml lib

--- a/.gitignore
+++ b/.gitignore
@@ -13,17 +13,17 @@ RELEASE-VERSION
 *.egg
 *.eggs
 *.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
+/dist
+/build
+/eggs
+/parts
+/bin
+/var
+/sdist
+/develop-eggs
+/.installed.cfg
+/lib
+/lib64
 
 # Installer logs
 pip-log.txt
